Fixed spacing in projects block

--- a/src/app/ui/content/projects/project-block.module.css
+++ b/src/app/ui/content/projects/project-block.module.css
@@ -1,7 +1,6 @@
 .projectBlockContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
     padding: 8px;
